--- a/Reports/LiteratureReview/bibliography.bib
+++ b/Reports/LiteratureReview/bibliography.bib
@@ -282,3 +282,17 @@ Year = {1998},
 	edition      =	{Fall 2016},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
+
+@book{hurley2005concise,
+  title={A concise introduction to logic},
+  author={Hurley, Patrick},
+  year={2005},
+  publisher={Cengage Learning}
+}
+
+@MISC{hammerhill,
+    author       = "Hammer Hill",
+    year={2016},
+    title        = "Existential Import",
+    howpublished = "http://cstl-cla.semo.edu/hhill/pl120/notes/existential%20import.htm"
+}
