--- a/Reports/LiteratureReview/test.tex
+++ b/Reports/LiteratureReview/test.tex
@@ -173,11 +173,11 @@ In this representation each circle is a term, which is then filled in to represe
 
 \begin{table}[htb]
   \centering
-\begin{tabular}{|>{\raggedright\arraybackslash}m{40mm}|m{40mm}|m{40mm}|}\hline
-    \multicolumn{1}{|>{\centering\arraybackslash}m{40mm}|}{\textbf{All Men Are Mortal}} 
-    & \multicolumn{1}{>{\centering\arraybackslash}m{40mm}|}{\textbf{All Greeks Are Men}} 
-    & \multicolumn{1}{>{\centering\arraybackslash}m{40mm}|}{\textbf{All Greeks Are Mortal}}\\
-\hline
+\begin{tabular}{>{\raggedright\arraybackslash}m{40mm} m{40mm} m{40mm}}
+    \multicolumn{1}{>{\centering\arraybackslash}m{40mm}}{\textbf{All Men Are Mortal}} 
+    & \multicolumn{1}{>{\centering\arraybackslash}m{40mm}}{\textbf{All Greeks Are Men}} 
+    & \multicolumn{1}{>{\centering\arraybackslash}m{40mm}}{\textbf{All Greeks Are Mortal}}\\
+
     \begin{minipage}{.29\textwidth}
     \begin{center}
       \includegraphics[scale=0.25]{VennAllMenAreMortal}
@@ -198,7 +198,7 @@ In this representation each circle is a term, which is then filled in to represe
     \end{center}
   
     \end{minipage}
-    \\ \hline
+    \\
   \end{tabular}
   \caption{AAA-1 Syllogism}\label{tbl:vennAAA-1}
 \end{table}
@@ -206,11 +206,10 @@ In this representation each circle is a term, which is then filled in to represe
 
 \begin{table}[htb]
   \centering
-\begin{tabular}{|>{\raggedright\arraybackslash}m{40mm}|m{40mm}|m{40mm}|}\hline
-    \multicolumn{1}{|>{\centering\arraybackslash}m{40mm}|}{\textbf{No lizards are mammals}} 
-    & \multicolumn{1}{>{\centering\arraybackslash}m{40mm}|}{\textbf{All lizards are reptiles}} 
-    & \multicolumn{1}{>{\centering\arraybackslash}m{40mm}|}{\textbf{Some reptiles are not mammals}}\\
-\hline
+\begin{tabular}{>{\raggedright\arraybackslash}m{40mm} m{40mm} m{40mm}}
+    \multicolumn{1}{>{\centering\arraybackslash}m{40mm}}{\textbf{No lizards are mammals}} 
+    & \multicolumn{1}{>{\centering\arraybackslash}m{40mm}}{\textbf{All lizards are reptiles}} 
+    & \multicolumn{1}{>{\centering\arraybackslash}m{40mm}}{\textbf{Some reptiles are not mammals}}\\
     \begin{minipage}{.29\textwidth}
     \begin{center}
     \includegraphics[scale=0.25]{VennNoLizardsAreMammals}
@@ -231,7 +230,7 @@ In this representation each circle is a term, which is then filled in to represe
     \end{center}
   
     \end{minipage}
-    \\ \hline
+    \\
   \end{tabular}
   \caption{EAO-3 Syllogism}\label{tbl:vennEAO-3}
 \end{table}
@@ -485,18 +484,18 @@ One of the benefits of using games to teach is their accessibility in comparison
 As discussed by \cite{malone1981toward} games can be intrinsically motivating, such that there are no external factors as to why a person is playing other than for their own enjoyment. This is in contrast to typical classroom learning that is usually more extrinsically motivated through grades, exam results and certificates. As  \cite{csikszentmihalyi1997talented} says, the school attendance would see a sharp drop if extrinsic rewards were removed. Of the two, intrinsic motivation is more resilient than extrinsic motivation and learning that takes place as a result of intrinsic motivation is of higher quality and longer lasting \citep{kawachi2003initiating}.
 
 However, it is important to remember that not all games are by definition intrinsically motivating, but need to be structured correctly to achieve this. Malone included challenge, fantasy and curiosity as the three cornerstones of intrinsically motivating serious games.  
-In order to create a challenging game, it should include uncertain goals that are not too easy for the players to complete. Ensuring a game is challenging is crucial as demonstrated by Malone's work surveying children's opinion on 25 different computer games. The results conclusively showed that the most popular games all shared one thing in common; they all contained a defined goal.  Similarly in a study carried out by \citep{abuhamdeh2012importance} on chess players, it was found that the more challenging the game the greater the player's enjoyment. This is important to bear in mind with syllogisms as it is demonstrates the need to add the correct amount of difficulty for the game to be successful.
+In order to create a challenging game, it should include uncertain goals that are not too easy for the players to complete. Ensuring a game is challenging is crucial as demonstrated by Malone's work surveying children's opinion on 25 different computer games. The results conclusively showed that the most popular games all shared one thing in common; they all contained a defined goal.  Similarly in a study carried out by \cite{abuhamdeh2012importance} on chess players, it was found that the more challenging the game the greater the player's enjoyment. This is important to bear in mind with syllogisms as it is demonstrates the need to add the correct amount of difficulty for the game to be successful.
 
-A fantasy environment in a game is said to "evoke mental images of phyical or social situations not actually present". Malone divides these fantasies into intrinsic and extrinsic, with intrinsic being more interesting and instructional resulting in a  greater cognitive effect on learning. \cite{lepper1988motivational} explains how if learning takes place away from the functionality of the knowledge then this decontextualisation results in the learner becoming demotivated.  This can be tackled by teaching topics by using real world examples demonstrating how the concepts are applied. For syllogisms this can just be as simple as using actual examples that exist as opposed to using letters to represent sets. However, as this is not always feasible, Lepper proposed inserting the content of the topic into a fantasy context.
-Curiosity, like challenge, is stimulated from an optimal level of complexity. Also similarly like fantasy, curiosity is  broken down into two categories; sensory and cognitive.  Sensory curiosity, as the name suggests, uses lights, sounds and graphics to gain that attention of the participant. Cognitive curiosity is achieved by making the participant doubt their existing knowledge, as people desire to have "good form" in their cognitive structure.   By using this taxonomy when developing a serious game, it is clear that this could be used to engage people who otherwise might not have been interested in learning. 
+A fantasy environment in a game is said to "evoke mental images of phyical or social situations not actually present". Malone divides these fantasies into intrinsic and extrinsic, with intrinsic being more interesting and instructional resulting in a  greater cognitive effect on learning. \cite{lepper1988motivational} explains how if learning takes place away from the functionality of the knowledge then this decontextualisation results in the learner becoming demotivated.  This can be tackled by using real world examples demonstrating how the concepts are applied. For syllogisms this can just be as simple as using actual examples that exist as opposed to using letters to represent sets. However, as this is not always feasible, Lepper proposed inserting the content of the topic into a fantasy context.
+Curiosity, like challenge, is stimulated from an optimal level of complexity. Curiosity is also broken down into two categories; sensory and cognitive.  Sensory curiosity, as the name suggests, uses lights, sounds and graphics to gain the attention of the participant. Cognitive curiosity is achieved by making the participant doubt their existing knowledge, as people desire to have "good form" in their cognitive structure.   By using this taxonomy when developing a serious game, it is clear that this could be used to engage people who otherwise might not have been interested in learning. 
 
 \subsection{Feedback}
 Feedback is information regarding a person's understanding of a concept provided with the intention of improving the person's ability. Feedback is a crucial part of the education process and significantly influences the effectiveness of learning.
 
 As stated by \cite{hattie2007power}, "feedback is
-one of the most powerful influences on learning and achievement". A further study carried out by explored the most effective medium to provide feedback. Computer-assisted, audio and video feedback were found to be most effective forms with the more traditional approach of praise, punishment and providing extrinsic rewards being the worst \citep{hattie2007power}. 
+one of the most powerful influences on learning and achievement". A further study explored the most effective medium to provide feedback. Computer-assisted, audio and video feedback were found to be most effective forms with the more traditional approach of praise, punishment and providing extrinsic rewards being the worst \citep{hattie2007power}. 
 
-One of the main advantages of using games for education is the speed at which feedback can be delivered to the learner making this  especially important to the \textit{Net Generation}. The term \textit{Fast feedback} was coined b \cite{lumsden1988characteristics} which demonstrated how this timely feedback removed any uncertainty about progress and allowed any corrective action to be taken during the learning process. However, fast feedback is not a silver bullet and as such the speed at which feedback is delivered should depend on the difficulty of the task. The more complex the task, the greater the benefit of delaying the feedback to allow the information to be processed \cite{clariana2000applying}. 
+One of the main advantages of using games for education is the speed at which feedback can be delivered to the learner which is especially important to the \textit{Net Generation}. The term \textit{fast feedback} was coined by \cite{lumsden1988characteristics} to demonstrate how this timely feedback removed any uncertainty about progress and allowed any corrective action to be taken during the learning process. However, fast feedback is not a silver bullet and as such the speed at which feedback is delivered should depend on the difficulty of the task. The more complex the task, the greater the benefit of delaying the feedback to allow the information to be processed \cite{clariana2000applying}. 
 
 Feedback during the learning process is known as formative assessments, with summative assessments usually being carried out at the end. As explained by \cite{irons2007enhancing}, formative assessments can be beneficial as they enhance the learning process by creating a positive environment which results in greater motivation for learner. 
 
@@ -509,11 +508,10 @@ In contrast, complex games can take potentially hundreds of hours to complete an
 
 Serious games do not just apply to education, but are used by a wide variety of different industries. The United States military created America's Army to aid in their recruitment and Microsoft's Flight Simulator is used by pilots in training \citep{111701519980901}.
 
-MyMaths is a web based service that is used by schools in over 70 countries, with over 4.5 million users. It is marketed as an online learning platform that provides lessons and homework to school children. It allows them to complete all of this work online and is then automatically marked.
-As Figure 2.1 shows, MyMaths makes use of fast feedback to provide the player with the results as soon as they have completed the task. However, MyMaths does not provide an immersive or particularly enjoyable experience for players. \cite{lee2013learning} found that while students said they enjoyed using computers to learn, they did not want to use MyMaths. This could be due to that fact that MyMaths is very one dimensional, merely presenting questions in a quiz like format. This does not engage with the player, incite any emotive feelings or provide any fantasy environment. It would more enjoyable if the technologies available were used to make it more interactive.
-
 
 \subsection{MyMaths}
+MyMaths is a web based service that is used by schools in over 70 countries, with over 4.5 million users. It is marketed as an online learning platform that provides lessons and homework to school children. It allows them to complete all of this work online and is then automatically marked.
+As Figure 2.1 shows, MyMaths makes use of fast feedback to provide the player with the results as soon as they have completed the task. However, MyMaths does not provide an immersive or particularly enjoyable experience for players. \cite{lee2013learning} found that while students said they enjoyed using computers to learn, they did not want to use MyMaths. This could be due to that fact that MyMaths is very one dimensional, merely presenting questions in a quiz like format. This does not engage with the player, incite any emotive feelings or provide any fantasy environment. It would more enjoyable if the technologies available were used to make it more interactive.
 \begin{figure}[!tbp]
   \centering
   \begin{minipage}[b]{1\textwidth}
